fix(tree-grid): fixed external filtering sample alignment

--- a/src/app/tree-grid/tree-grid-external-excel-style-filtering/tree-grid-external-excel-style-filtering.component.scss
+++ b/src/app/tree-grid/tree-grid-external-excel-style-filtering/tree-grid-external-excel-style-filtering.component.scss
@@ -11,6 +11,9 @@
     flex-flow: column;
     height: 650px;
     margin-left: 1px;
+    font-size: 0.9em;
+    transform: scale(0.95);
+    transform-origin: top left;
 }
 
 .igSelect {
